safari height100% flexbox crash fix. replaced vertical stretch method with grid

--- a/master.scss
+++ b/master.scss
@@ -23,6 +23,9 @@ html,body {
   min-height: 100%;
   scroll-behavior: smooth;
 }
+body {
+  height: 100%;
+}
 
 body.mobile-nav-open {
   overflow: hidden;
@@ -41,18 +44,14 @@ body.mobile-nav-open {
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 1fr auto;
   main {
-    flex-grow: 1;
-    display: flex !important;
-    flex-direction: column;
     section,.content {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      flex-grow: 1;
     }
   }
 }
@@ -245,7 +244,7 @@ header {
   z-index: 99;
   width: 100%;
   background: $dark;
-  #header-content {
+  .content {
     width: 80%;
     max-width: 1800px;
     padding: 15px 0 !important;
@@ -350,7 +349,7 @@ main#main-home {
   section#home {
     position: relative;
     height: clamp(650px, 90vh, 850px);
-    #home-content {
+    .content {
       padding-top: 180px;
     }
     #video-wrapper {
@@ -390,7 +389,7 @@ main#main-home {
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    #acceptances-content {
+    .content {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -493,7 +492,7 @@ main#main-home {
       opacity: 0.03;
       transform: translateY(0);
     }
-    #testimonials-content {
+    .content {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -574,7 +573,7 @@ main#main-home {
     img {
       display: none;
     }
-    #ready-content {
+    .content {
       text-align: center;
       .title {
         position: relative;
@@ -630,7 +629,7 @@ main#main-courses {
   section#courses-ready {
     position: relative;
     background: $navy;
-    #ready-content {
+    .content {
       display: flex;
       text-align: center;
       padding-top: 180px;
@@ -669,7 +668,7 @@ main#main-courses {
   }
   section#enrichment {
     background: white;
-    #enrichment-content {
+    .content {
       color: $navy;
     }
   }
@@ -701,7 +700,7 @@ main#main-courses {
   }
 }
 main#main-calendar {
-  #calendar-content {
+  .content {
     width: 90%;
     max-width: 1200px;
     padding-top: 180px;
@@ -742,7 +741,7 @@ main#main-calendar {
   }
 }
 main#main-about {
-  #about-content {
+  .content {
     width: 70%;
     max-width: 600px;
     padding-top: 180px;
@@ -774,7 +773,7 @@ footer {
     background: #073062;
     display: flex;
     justify-content: center;
-    #footer-links-content {
+    .content {
       padding: 20px 0;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -794,7 +793,7 @@ footer {
     display: flex;
     justify-content: center;
     background: #032246;
-    #contact-content {
+    .content {
       padding: 40px 0;
       display: grid;
       grid-template-columns: 1fr;
@@ -956,7 +955,7 @@ footer {
       #video-wrapper video {
         transform: translate(0, 0);
       }
-      #home-content {
+      .content {
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: 1fr;
@@ -1042,7 +1041,7 @@ footer {
   }
   footer {
     section#footer-links {
-      #footer-links-content {
+      .content {
         max-width: 1000px;
         display: flex !important;
         justify-content: space-between;
@@ -1053,7 +1052,7 @@ footer {
       }
     }
     section#contact {
-      #contact-content {
+      .content {
         max-width: 1000px;
         grid-template-columns: repeat(3, 1fr) !important;
         grid-template-rows: repeat(2, 1fr) !important;
